finished first challenge

--- a/style.less
+++ b/style.less
@@ -1,11 +1,36 @@
-.test{
-  width: 200px;
-  height: 200px;
-  background: red;
-  color: black;
-  line-height: 200px;
+#itemHolder{
   text-align: center;
-  span{
-      font-size: 28px;
+  .imgHolder{
+    width: 300px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    display: none;
+    img{
+      width: 300px;
+      height: 350px;
+    }
+    div{
+      text-align: left;
+      font-family: cursive;
+      color: #FFF;
+    }
   }
+}
+
+body{
+  background: url("https://www.sideshowtoy.com/assets/products/2003562-grey-hulk/lg/marvel-grey-hulk-statue-sideshow-2003562-06.jpg")no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+input{
+  padding: 10px;
+  border-radius: 50px;
+  margin: 50px;
+}
+
+input:focus{
+  outline: none;
 }
