--- a/style.less
+++ b/style.less
@@ -1,19 +1,27 @@
 #itemHolder{
   text-align: center;
-  .imgHolder{
+}
+.imgHolder {
+  width: 300px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  display: none;
+  position: relative;
+  img {
     width: 300px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-    display: none;
-    img{
-      width: 300px;
-      height: 350px;
-    }
-    div{
-      text-align: left;
-      font-family: cursive;
-      color: #FFF;
-    }
+    height: 350px;
+  }
+  div {
+    text-align: left;
+    font-family: cursive;
+    color: #FFF;
+  }
+  i {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    font-size: 28px;
+    color: black;
   }
 }
 
