--- a/style.css
+++ b/style.css
@@ -1,20 +1,28 @@
 #itemHolder {
   text-align: center;
 }
-#itemHolder .imgHolder {
+.imgHolder {
   width: 300px;
   margin-right: 30px;
   margin-bottom: 30px;
   display: none;
+  position: relative;
 }
-#itemHolder .imgHolder img {
+.imgHolder img {
   width: 300px;
   height: 350px;
 }
-#itemHolder .imgHolder div {
+.imgHolder div {
   text-align: left;
   font-family: cursive;
   color: #FFF;
+}
+.imgHolder i {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  font-size: 28px;
+  color: black;
 }
 body {
   background: url("https://www.sideshowtoy.com/assets/products/2003562-grey-hulk/lg/marvel-grey-hulk-statue-sideshow-2003562-06.jpg") no-repeat;
