--- a/style.css
+++ b/style.css
@@ -39,3 +39,22 @@ input {
 input:focus {
   outline: none;
 }
+h1 {
+  color: aliceblue;
+}
+button {
+  float: right;
+  padding: 10px;
+  border-radius: 50px;
+  margin: 50px;
+  background: #fff;
+}
+#pagination {
+  height: 40px;
+  width: 250px;
+  background: whitesmoke;
+  position: absolute;
+  bottom: 80px;
+  right: 80px;
+  display: none;
+}
