--- a/style.less
+++ b/style.less
@@ -63,3 +63,13 @@ button{
   right: 80px;
   display: none;
 }
+
+.rest{
+  display: none!important;
+}
+
+.showMore{
+  display: block;
+  float: none;
+  margin: 0 auto;
+}
