--- a/style.css
+++ b/style.css
@@ -66,3 +66,15 @@ button {
   float: none;
   margin: 0 auto;
 }
+.show {
+  display: inline-block;
+}
+.hide {
+  display: none;
+}
+.checkMark {
+  color: yellow!important;
+}
+.black {
+  color: #000 !important;
+}
