--- a/style.less
+++ b/style.less
@@ -73,3 +73,19 @@ button{
   float: none;
   margin: 0 auto;
 }
+
+.show{
+  display: inline-block;
+}
+
+.hide{
+  display: none;
+}
+
+.checkMark{
+  color: yellow!important;
+}
+
+.black{
+  color: #000!important;
+}
